--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     
     // Material Icons Extended
     implementation 'androidx.compose.material:material-icons-extended:1.6.1'
+
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
