--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,2 +1,2 @@
-#BASE_URL=https://cahut-be.onrender.com/
-BASE_URL=http://10.0.2.2:5000
+BASE_URL=https://cahut-be.onrender.com/
+#BASE_URL=http://10.0.2.2:5000
