--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:icon="@drawable/logoic"
+        android:label="Cahut"
+        android:roundIcon="@drawable/logoic"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cahut"
         android:usesCleartextTraffic="true"
