--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3-window-size-class'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
     implementation 'com.google.zxing:core:3.5.2'
     implementation 'io.socket:socket.io-client:2.1.0'
